--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "regform",
   "version": "1.0.0",
-  "description": "Registration form project from thapatechnical youtube channel",
+  "description": "Login and registration form project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
