--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Sailesh Kafle",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.2",
     "hbs": "^4.2.0",
     "mongoose": "^6.1.9",
